--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         <img class="w-full h-[750px] object-cover"
             src="/Photo/prewed3.webp">
         <div class="bg-gradient-to-t from-[#170E0C] to-transparent absolute top-0 left-0 w-full h-full"></div>
+
+        <button id="musicButton" class="bg-beige rounded-full p-4 absolute top-[10px]">
+            <img src="Photo/Music.png" alt="Music Icon" class="w-12 h-12">
+        </button>
+          
         <h1
             class="font-['Inria_Serif'] absolute top-[400px] left-1/2 justify-center transform -translate-x-1/2 -translate-y-1/2 text-[100px] text-white">
             The Wedding of</h1>
@@ -72,7 +77,9 @@
         </p>
     </div>
 
+<div>
 
+</div>
 <div>
     <div class="grid grid-cols-2 text-center items-center font-['Inria_Serif']">
         <!-- Kolom Kiri -->
