--- a/index.html
+++ b/index.html
@@ -60,10 +60,14 @@
             class="font-['Inria_Serif'] absolute top-[560px] left-1/2 justify-center transform -translate-x-1/2 -translate-y-1/2 text-[20px] text-white">
             Wednesday, April 30th, 2025   ------   At Atlas Beach Club Bali</p>
     </div>
-
+<div class="m-16">
+        <div class="text-center">
+          <img src="Photo/VektorHiasan1.svg" alt="Border Image" class=" mx-auto w-[400px]">
+        </div>
+</div>
     <!-- ni text awalnya -->
-    <div class="container mx-auto p-[100px] text-center">
-        <h1 class="mt-30 mb-12 font-extrabold font-['Inria_Serif'] text-[60px]">Our Story</h1>
+    <div class="container mx-auto p-[50px] text-center">
+        <h1 class="mx-10 font-extrabold font-['Inria_Serif'] text-[60px]">Our Story</h1>
         <p class=" list-disc text-lg text-justify text-slate-800">
             Once Upon a Time in College...<br><br>
             William Saputra and Skyee Kanahaya were just two ordinary classmates at university, each lost in their own
@@ -77,9 +81,12 @@
         </p>
     </div>
 
-<div>
-
+<div class="mb-10">
+        <div class="text-center">
+          <img src="Photo/VektorHiasan2.svg" alt="Border Image" class="mx-auto w-[400px]">
+        </div>
 </div>
+      
 <div>
     <div class="grid grid-cols-2 text-center items-center font-['Inria_Serif']">
         <!-- Kolom Kiri -->
