--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <nav class="bg-white shadow-md sticky top-0">
         <div class="max-w-screen-xl mx-auto px-4">
             <div class="flex justify-between md:justify-center items-center">
-                <div class="hidden lg:flex items-center space-x-2 absolute left-4">
+                <div onclick="location.href='#'" class="hidden lg:flex items-center space-x-2 absolute left-4 cursor-pointer">
                     <span class="font-script text-rose-400 text-xl">W</span>
                     <span class="text-rose-600 font-serif">&</span>
                     <span class="font-script text-rose-400 text-xl">H</span>
@@ -59,23 +59,23 @@
                                 class="block py-4 px-4 text-rose-500 font-serif uppercase tracking-wide text-sm hover-underline-animation">Cover</a>
                         </li>
                         <li>
-                            <a href="#"
+                            <a href="#storysection"
                                 class="block py-4 px-4 text-gray-600 font-serif uppercase tracking-wide text-sm hover-underline-animation hover:text-rose-500">Story</a>
                         </li>
                         <li>
-                            <a href="#"
+                            <a href="#couplesection"
                                 class="block py-4 px-4 text-gray-600 font-serif uppercase tracking-wide text-sm hover-underline-animation hover:text-rose-500">Couple</a>
                         </li>
                         <li>
-                            <a href="#"
+                            <a href="#gallerysection"
                                 class="block py-4 px-4 text-gray-600 font-serif uppercase tracking-wide text-sm hover-underline-animation hover:text-rose-500">Gallery</a>
                         </li>
                         <li>
-                            <a href="#"
+                            <a href="#datesection"
                                 class="block py-4 px-4 text-gray-600 font-serif uppercase tracking-wide text-sm hover-underline-animation hover:text-rose-500">Date</a>
                         </li>
                         <li>
-                            <a href="#"
+                            <a href="#wishessection"
                                 class="block py-4 px-4 text-gray-600 font-serif uppercase tracking-wide text-sm hover-underline-animation hover:text-rose-500">Wishes</a>
                         </li>
                     </ul>
@@ -83,7 +83,7 @@
 
                 <!-- rsvp -->
                 <div class="hidden lg:flex items-center absolute right-4">
-                    <a href="#"
+                    <a href="#rsvpsection"
                         class="px-4 py-1.5 bg-rose-400 text-white rounded-full hover:bg-rose-500 hover-bg-transition text-sm font-serif uppercase tracking-wide shadow-sm">RSVP</a>
                 </div>
             </div>
@@ -111,7 +111,7 @@
         <!-- <img class="w-full h-[750px] object-cover" src="/Photo/prewed3.webp"> -->
         <div class="bg-gradient-to-t from-[#170E0C] to-transparent absolute top-0 left-0 w-full h-full"></div>
         <button id="musicButton" class="bg-beige rounded-full p-4 absolute top-[10px]">
-            <img src="Photo/Music.png" alt="Music Icon" class="w-12 h-12">
+            <img id="musicIcon" src="Photo/Music2.png" alt="Music Icon" class="w-12 h-12">
         </button>
 
     </div>
@@ -121,7 +121,7 @@
         </div>
     </div>
     <!-- ni text awalnya -->
-    <div class="container mx-auto p-[50px] text-center">
+    <div id="storysection" class="container mx-auto p-[50px] text-center">
         <h1 class="mx-10 font-extrabold font-['Inria_Serif'] text-[60px] text-rose-500">Our Story</h1>
         <p class="text-lg text-justify text-gray-600">
             Once Upon a Time in College...<br><br>
@@ -142,7 +142,7 @@
         </div>
     </div>
 
-    <div class="container mx-auto px-4 py-8">
+    <div id="couplesection" class="container mx-auto px-4 py-8">
         <div class="flex flex-col md:flex-row justify-between items-center gap-8 mb-16">
             <!-- yang cowo -->
             <div class="w-full md:w-1/2 flex flex-col md:flex-row items-center">
@@ -280,8 +280,8 @@
         </div>
     </div>
 
-    <div class="text-center py-8 px-4">
-        <h1 class="text-4xl font-bold mb-8 text-rose-500 font-['Inria_Serif']">Save the Date</h1>
+    <div id="datesection" class="text-center py-8 px-4">
+        <h1 class="text-4xl font-bold mb-8 mt-8 text-rose-500 font-['Inria_Serif']">Save the Date</h1>
         <div class="flex flex-wrap justify-center items-center gap-6 max-w-4xl mx-auto mb-8">
             <div class="flex flex-col items-center bg-white rounded-lg shadow-md p-6 w-24">
                 <div id="days" class="text-3xl font-bold text-rose-400">00</div>
@@ -310,7 +310,7 @@
                 2025</span></p>
     </div>
 
-    <div class="flex flex-col items-center justify-center text-center px-4">
+    <div id="rsvpsection" class="flex flex-col items-center justify-center text-center px-4">
         <div class="text-black mb-6">
             <p class="text-lg md:text-xl">
                 <strong class="text-rose-500"><span id="guestCount" class="text-rose-500 text-black font-bold">0</span>
@@ -332,7 +332,7 @@
         </div>
     </div>
 
-    <div class="bg-white py-8 px-4">
+    <div id="wishessection" class="bg-white py-8 px-4">
         <h1 class="text-3xl font-bold text-center text-rose-500 mb-10 font-['Inria_Serif']">Wishes</h1>
 
         <!-- Daftar Wish -->
