--- a/index.html
+++ b/index.html
@@ -325,6 +325,29 @@
             Reservation (RSVP)
         </button>
     </div>
+    <div class="container mx-auto px-4 py-8">
+        <header class="text-center mb-8">
+          <h1 class="text-3xl font-bold text-rose-400">Our Wedding Location</h1>
+          <p class="mt-2 text-xl text-gray-600">We are excited to invite you to our wedding. Here is the location of the event:</p>
+        </header>
+    
+        <div class="map-container text-center mb-8">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3944.2742528501635!2d115.13587857501453!3d-8.66544699138209!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd2477f04748e85%3A0x65b83481caecd509!2sAtlas%20Beach%20Club!5e0!3m2!1sid!2sid!4v1745972886958!5m2!1sid!2sid"
+                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+                class="rounded-lg shadow-lg"></iframe>
+        </div>
+
+        <div class="text-center">
+            <p class="text-lg text-gray-700">Address: <strong class="text-rose-400">Jl. Pantai Berawa No. 88, Canggu, Bali, Kabupaten Badung, Bali 80361, Atlas Beach Club Bali</strong></p>
+        </div>
+        <div class="text-center mt-8">
+            <a href="https://www.google.com/maps/dir/?api=1&destination=Atlas+Beach+Club+Bali" target="_blank" rel="noopener noreferrer"
+            class="inline-block bg-rose-400 text-white font-semibold py-2 px-6 rounded-full hover:bg-rose-500 transition mx-auto">
+            Open in Google Maps
+            </a>
+        </div>
+        </div>
 
     <div class="m-16">
         <div class="text-center">
